# prisma-manager

./: .gitignore  .pre-commit-config.yaml  .prisma-schema-manager.yaml  LICENSE  README.md  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  temp.env
database/: .gitignore  __main__.py  cli.py  codegen.py  fixtures.py  main.py  utils.py
database/commands/: codegen.py  switch.py
database/prisma/: .gitignore  models.prisma  python.prisma
prisma_manager/: __main__.py  codegen.py  main.py  utils.py
prisma_manager/prisma/: python.prisma
schema_manager/: __main__.py  config.py  exceptions.py  main.py
schema_manager/commands/: build.py  codegen.py  init_project.py  switch.py
