[metadata]
name = prisma_manager
version = 0.2.0
description = prisma python client for tostudyio cockroachdb
author = Dominique F. Garmier
auther_email = dominique@garmier.ch

[options]
python_requires = >=3.10
install_requires =
    prisma
    pydantic==1.9.0  # pydantic newest version has a bug
packages = find:

[options.package_data]
database =
    .gitignore
    prisma/python.prisma
    prisma/javascript.prisma
    prisma/schema.prisma
    py.typed

[options.packages.find]
exclude = tests*, testing*, build.py

[options.entry_points]
console_scripts =
    prisma-manager = prisma_manager.main:main

[flake8]
count = True
statistics = True
max-line-length = 127
extend-exclude = .venv, .pyc
ignore=F401,E123,W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
exclude = (setup.py|build/)

[mypy-tests.*]
disallow_untyped_defs = False

[mypy-testing.*]
disallow_untyped_defs = False

[tool:pytest]
python_files = tests/*.py tests/**/*.py tests.py test_*.py *_tests.py
